<resources>
    <string name="app_name">ABN Repositories</string>
    <string name="data_load_fail">Failed to load repositories</string>
    <string name="data_offline">Currently offline, refresh to reconnect</string>

    <string name="activity_repository_title">Repository</string>

    <string name="description_repo_avatar">Repository\'s Avatar</string>

    <string name="placeholder_repo_name">Repo</string>
    <string name="placeholder_repo_full_name">Repo Full</string>
    <string name="placeholder_repo_visibility">Visibility</string>
    <string name="placeholder_repo_private">Private</string>
    <string name="placeholder_repo_description">Description</string>

    <string name="list_repo_visibility">Visibility: %1$s</string>
    <string name="list_repo_private">Private: %1$s</string>

    <string name="repo_private_true">yes</string>
    <string name="repo_private_false">no</string>

    <string name="button_open_repo">Open repository in browser</string>
</resources>